...
        <Tabs.Screen
          name="index"
          options={{
            title: "Home",
            tabBarIcon: ({ color }) => <Icon as={Home} size={28} color={color} />,
            tabBarButton: (props) => (
              <MeasuredTabButton {...props} routeKey="route-home" testID="tab-button-home" />
            ),
          }}
        />
        <Tabs.Screen name="discover" options={{ href: null }} />
        <Tabs.Screen name="groups" options={{ href: null }} />
        <Tabs.Screen
...
