...
export default function PlanLayout() {
  return (
    <Stack>
      <Stack.Screen
        name="index"
        options={{
          title: "Plan",
          headerShown: false,
        }}
      />
      <Stack.Screen
        name="library/index"
        options={{
...
