...
          title: "Profile Metric",
        }}
      />
      <Stack.Screen
        name="training-preferences"
        options={{
          title: "Training Preferences",
        }}
      />
    </Stack>
  );
}

