appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      visible:
        id: "discover-screen"
    commands:
      - hideKeyboard
      - back
- tapOn:
    id: "tab-button-home"
- extendedWaitUntil:
    visible:
      id: "search-header-button"
    timeout: 10000
